Compatibilidad con Java 8
Se refactoriza el código para que compatibilidad con Java 8, se eliminan librerías externas y se aumenta ligeramente el tamaño de las imágenes.